2013-05-29  Dario Rodriguez <dario@artica.es>

	* pandoradb_data.sql: Added new network_components.

2013-05-29  Dario Rodriguez <dario@artica.es>

	* pandoradb_data.sql: Fixed an error on plugin's name.

2013-05-29  Dario Rodriguez <dario@artica.es>

	* pandoradb_data.sql: Added new plugins on instalation.

2013-05-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Change TTL of the graph items
	in visual console from 2 to 1 to avoid create infinite files in
	/tmp. TTL=2 is only for PDF renderization

2013-05-28 Miguel de Dios <miguel.dedios@artica.es>

	* include/config_process.php: set the timezone in init values for
	PHP because for example it is used in the library for report PDF.

2013-05-27 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_gis.php: added function "gis_calculate_distance"
	to calculate the distance between to points, and return in the
	international metric system, kilometers.
	
	* operation/agentes/gis_view.php: added column with the show the
	distance with the previous point.
	
	MERGED FROM THE TRUNK

2013-05-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	extensions/snmp_explorer.php: Fixed errors in
	snmp browser adapting output of new snmp way
	of retrieve data and avoiding interfaces without
	name

2013-05-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: cleaned source code style.
	
	* include/graphs/pChart/pPie.class.php: fixed the border color of
	piechart (merged from the trunk).
	
	Fixes: #2230

2013-05-23 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora_visual_console.js,
	include/functions_visual_map.php: fixed to show the lines between
	the items in the visualmap into a dashboard.
	
	Fixes: #2232

2013-05-23 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/graphs.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed ACL for
	the custom graphs.
	
	Fixes: #2233
